--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,5 @@
 STRIPE_PUBLISHABLE_KEY=your_test_key_here
 STRIPE_SECRET_KEY=your_test_key_here
+
+# The username and password below needs to be changed in your .env file.
+export HTTP_AUTH=User:password
